--- a/rcon.css
+++ b/rcon.css
@@ -103,3 +103,43 @@ a:hover
 	text-align: right;
 	padding-right: 8px;
 }
+
+.navbar-default
+{
+	background-color: #428bca;
+    background-image: none;
+    border: none;
+    border-radius: 0;
+    color: white;
+}
+
+.navbar-default .navbar-brand, .navbar-default .navbar-brand:hover
+{
+    color: #fff;
+}
+
+.navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus
+{
+    color: #fff;
+}
+
+.navbar-default .navbar-nav > li > a:hover
+{
+	background-color: rgba( 255, 255, 255, 0.25 );
+}
+
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .active > a
+{
+	background-color: white;
+	background-image: none;
+    border: none;
+	color: #428bca;
+}
+
+.navbar-info
+{
+	position: relative;
+    display: block;
+    padding: 15px;
+	line-height: 20px;
+}
