move disconnect button to nav-header
moved disconnect button to nav-header
fix navbar (responsive again)
replace custon classes with bootstap classes

--- a/rcon.css
+++ b/rcon.css
@@ -118,6 +118,7 @@ a:hover
     color: #fff;
 }
 
+.navbar-default .navbar-nav > li > .navbar-text,
 .navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus
 {
     color: #fff;
